--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
+<!DOCTYPE html>
+
 <html>
+    <head>
+        <meta charset="utf-8">
+        <title>Project: Google Homepage</title>
+        <link href="styles/style.css" rel="stylesheet">
+    </head>
     <body>
         <img src="images/google-logo.png" alt="">
     </body>
