--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         <link href="styles/style.css" rel="stylesheet">
     </head>
     <body>
-        <img src="images/google-logo.png" alt="">
+        <main>
+            <img src="images/google-logo.png" alt="">
+            <form action="https://www.google.com">
+                <input type="text" placeholder="Search Google or type a URL">
+            </form>
+        </main>
     </body>
 </html>
