--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
         <link href="styles/style.css" rel="stylesheet">
     </head>
     <body>
+        <header>
+
+        </header>
+        
         <main>
             <img src="images/google-logo.png" alt="">
             <form action="https://www.google.com">
                 <input type="text" placeholder="Search Google or type a URL">
             </form>
         </main>
+
+        <footer>
+
+        </footer>
     </body>
 </html>
