--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>Project: Google Homepage</title>
@@ -12,8 +12,8 @@
         </header>
         
         <main>
-            <img src="images/google-logo.png" alt="">
-            <form action="https://www.google.com">
+            <img src="images/google-logo.png" id="logo" alt="">
+            <form action="https://www.google.com" id="searchbar">
                 <input type="text" placeholder="Search Google or type a URL">
             </form>
         </main>
