--- a/index.html
+++ b/index.html
@@ -3,23 +3,30 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Project: Google Homepage</title>
-        <link href="styles/style.css" rel="stylesheet">
+        <title>The Odin Project: Google Homepage</title>
     </head>
     <body>
-        <header>
-
-        </header>
+      <div>
+          <header>
+           <ul>
+             <li><a href="" alt="About">About</a></li>
+             <li><a href="" alt="store">Store</a></li>
+             <li style="float:right"><a href="" alt="Sign in">Sign in</a></li>
+             <li style="float:right"><a href="" alt="images">Images</a></li>
+             <li style="float:right"><a href="a" alt="Gmail">Gmail</a></li>
+            </ul>
+          </header>
         
-        <main>
-            <img src="images/google-logo.png" id="logo" alt="">
+          <main>
+            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" id="logo" alt="">
             <form action="https://www.google.com" id="searchbar">
                 <input type="text" placeholder="Search Google or type a URL">
             </form>
-        </main>
+          </main>
+      </div>
 
         <footer>
 
         </footer>
-    </body>
+  </body>
 </html>
