--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <!--Meta info, fonts, etc; commenting out things that will be included in actual files later-->
         <meta charset="utf-8">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <!--link rel="stylesheet" href="style.css" media="all"-->
+        <link rel="stylesheet" href="style.css" media="all">
         <title>The Odin Project: Google Homepage</title>
     </head>
   
